<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:qdx="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/id_uc_news_header_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFBFD"
        android:orientation="vertical"
        app:layout_behavior="@string/behavior_uc_header_pager"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="#7FBDFF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Title"
            >
            <microtech.hxswork.com.android_work.widget.BezierViewPager
                android:id="@+id/view_page"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:overScrollMode="never" />

            <microtech.hxswork.com.android_work.widget.hcrollvipager.BezierRoundView
                android:id="@+id/bezRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@id/view_page"
                android:background="#FAFBFD"
                qdx:color_bez="#38E6FF"
                qdx:color_stroke="#D1DDE6"
                qdx:color_touch="#D1DDE6"
                qdx:radius="20dp" />

        </LinearLayout>
    </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="-45dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_behavior="@string/behavior_uc_title">

            <TextView
                android:id="@+id/news_title_tv"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="12dip"
                android:paddingRight="12dip"
                android:text="UC头条"
                android:textColor="@android:color/white"
                />

            <ImageView
                android:id="@+id/iv_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="right|center_vertical"
                android:padding="3dip"
                android:src="@mipmap/doctor_men"/>
        </FrameLayout>


        <android.support.design.widget.TabLayout
            android:id="@+id/mTabLayout"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:background="#FAFBFD"
            app:layout_behavior="@string/behavior_uc_news_tab"
            app:tabGravity="fill"
            android:layout_height="45dp"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/id_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F0F4C3"
            app:layout_behavior="@string/behavior_contents">

        </android.support.v4.view.ViewPager>
</android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>